--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1,4 +1,4 @@
-html,body {background-color:#DFDFDF;}
+html,body {background-color:#DFDFDF;font-size:14px;}
 a {color:#0000ff;}
 
 .header {position:fixed;top:0;left:0;width:100%;height:40px;background-color:#666;}
@@ -13,3 +13,11 @@ a {color:#0000ff;}
 
 .con-center h3,
 .con-center p {margin:10px;text-align:center;}
+
+.pure-form fieldset {margin:15px 200px;}
+.pure-form fieldset legend {margin:15px 0;font-weight:bold;}
+.pure-form fieldset .pure-control-group {margin:15px 0;}
+.pure-form fieldset input[type="text"],
+.pure-form fieldset select {width:200px;}
+input.ng-invalid {color:#b94a48;border-color:#e9322d;}
+.val-error {font-size:12px;color:#ec0000;}
